exports[`Passing a width and height`] = `
<canvas
  height={300}
  width={500} />
`;

exports[`Updating for every 1.5s, using canvas`] = `
<canvas
  height={300}
  width={300} />
`;

exports[`Using cell_size`] = `
<canvas
  height={300}
  width={300} />
`;

exports[`Without props - output in Canvas`] = `
<canvas
  height={300}
  width={300} />
`;
